Update Introduction_part1.md, time_series_fundamentals.md, index.html, and 17 more files

--- a/examples/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/portfolios/portfolio_building_tutorial.ipynb
@@ -124,7 +124,7 @@
     "        self.source_prices=source_prices\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \n",
-    "    def update_series_from_source(self, update_statistics):\n",
+    "    def update(self, update_statistics):\n",
     "        \"\"\"\n",
     "        Update the time series by simulating a new data point based on the last observation,\n",
     "        or simulate a complete series if no observations exist.\n",
