--- a/notebooks/Getting Started.ipynb
+++ b/notebooks/Getting Started.ipynb
@@ -343,7 +343,7 @@
     "fig.add_trace(\n",
     "    go.Scatter(\n",
     "        x=res.index, \n",
-    "        y=res[\"portfolio\"], \n",
+    "        y=res[\"close\"], \n",
     "        mode=\"lines+markers\",\n",
     "        name=\"Portfolio Value\",\n",
     "        line=dict(color='blue', width=1),\n",
