--- a/examples/getting_started/Getting Started.ipynb
+++ b/examples/getting_started/Getting Started.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:04:11.722099Z",
-     "start_time": "2025-03-17T20:04:07.227344Z"
+     "end_time": "2025-03-24T15:09:02.290991Z",
+     "start_time": "2025-03-24T15:09:01.853852Z"
     }
    },
    "cell_type": "code",
@@ -12,7 +12,7 @@
     "\n",
     "#comment out for local testing out of Main Sequence Platform\n",
     "import dotenv\n",
-    "dotenv.load_dotenv('../.env.dev')\n",
+    "dotenv.load_dotenv('../../.env')\n",
     "\n",
     "from mainsequence.virtualfundbuilder.portfolio_interface import PortfolioInterface\n",
     "from mainsequence.virtualfundbuilder.agent_interface import TDAGAgent"
@@ -23,40 +23,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-17T20:04:08.009462Z [debug    ] Getting Auth Headers ASSETS_ORM application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:39 in refresh_headers())\n",
-      "2025-03-17T20:04:08.672938Z [debug    ] Getting Auth Headers ASSETS_ORM application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:39 in refresh_headers())\n",
-      "2025-03-17T20:04:08.743338Z [debug    ] Getting Auth Headers ASSETS_ORM application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:39 in refresh_headers())\n",
-      "2025-03-17T20:04:08.756362Z [debug    ] Requesting GET from http://127.0.0.1:8000/orm/api/assets/api/constants application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:09.423060Z [debug    ] Requesting GET from http://127.0.0.1:8000/orm/api/pods/projects/get_user_default_project/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:10.096922Z [debug    ] Getting Auth Headers ASSETS_ORM application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:39 in refresh_headers())\n",
-      "2025-03-17T20:04:10.114787Z [debug    ] Requesting GET from http://127.0.0.1:8000/orm/api/ts_manager/api/constants application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "C:\\Users\\danie\\code\\mainsequence-sdk\\.venv\\lib\\site-packages\\pydantic\\_internal\\_generate_schema.py:502: UserWarning: FieldInfo(annotation=NoneType, required=False, default=<class 'mainsequence.mainsequence_client.models_vam.AssetMixin'>, json_schema_extra={'portfolio_configuration_overwrite': <class 'mainsequence.virtualfundbuilder.models.AssetMixinOverwrite'>}) is not a Python type (it may be an instance of an object), Pydantic will allow any object with no validation since we cannot even enforce that the input is an instance of the given type. To get rid of this error wrap the type with `pydantic.SkipValidation`.\n",
-      "  warn(\n",
-      "2025-03-17T20:04:10.696804Z [debug    ] Registered StrategyType.SIGNAL_WEIGHTS_STRATEGY class 'IntradayTrend': <class 'mainsequence.virtualfundbuilder.contrib.signals.intraday_trend.IntradayTrend'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:10.731359Z [debug    ] Register signal: IntradayTrend application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:10.739372Z [debug    ] Registered StrategyType.SIGNAL_WEIGHTS_STRATEGY class 'FixedWeights': <class 'mainsequence.virtualfundbuilder.contrib.signals.market_cap.FixedWeights'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:10.756104Z [debug    ] Requesting POST from http://127.0.0.1:8000/orm/api/tdag-gpt/register_strategy/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:10.782826Z [debug    ] Registered StrategyType.SIGNAL_WEIGHTS_STRATEGY class 'MarketCap': <class 'mainsequence.virtualfundbuilder.contrib.signals.market_cap.MarketCap'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:10.786824Z [debug    ] Register signal: FixedWeights  application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:10.831367Z [debug    ] Register signal: MarketCap     application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:10.831367Z [debug    ] Registered StrategyType.SIGNAL_WEIGHTS_STRATEGY class 'MockSignal': <class 'mainsequence.virtualfundbuilder.contrib.signals.mock_signal.MockSignal'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:10.853402Z [debug    ] Requesting POST from http://127.0.0.1:8000/orm/api/tdag-gpt/register_strategy/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:10.859778Z [debug    ] Requesting POST from http://127.0.0.1:8000/orm/api/tdag-gpt/register_strategy/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:10.899927Z [debug    ] Register signal: MockSignal    application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:10.975689Z [debug    ] Requesting POST from http://127.0.0.1:8000/orm/api/tdag-gpt/register_strategy/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:11.509954Z [debug    ] Registered StrategyType.SIGNAL_WEIGHTS_STRATEGY class 'ETFReplicator': <class 'mainsequence.virtualfundbuilder.contrib.signals.portfolio_replicator.ETFReplicator'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:11.554631Z [debug    ] Register signal: ETFReplicator application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:11.562779Z [debug    ] Registered StrategyType.REBALANCE_STRATEGY class 'VolumeParticipation': <class 'mainsequence.virtualfundbuilder.contrib.rebalance_strategies.rebalance_strategies.VolumeParticipation'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:11.572812Z [debug    ] Requesting POST from http://127.0.0.1:8000/orm/api/tdag-gpt/register_strategy/ application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:55 in make_request())\n",
-      "2025-03-17T20:04:11.589471Z [debug    ] Registered StrategyType.REBALANCE_STRATEGY class 'TimeWeighted': <class 'mainsequence.virtualfundbuilder.contrib.rebalance_strategies.rebalance_strategies.TimeWeighted'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:11.589471Z [debug    ] Register signal: VolumeParticipation application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:11.641251Z [debug    ] Registered StrategyType.REBALANCE_STRATEGY class 'ImmediateSignal': <class 'mainsequence.virtualfundbuilder.contrib.rebalance_strategies.rebalance_strategies.ImmediateSignal'> application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at base_factory.py:86 in insert_in_registry())\n",
-      "2025-03-17T20:04:11.645914Z [debug    ] Register signal: TimeWeighted  application_name=ms-sdk data_source_id=1 job_run_id=None project_id=3 (at utils.py:675 in _send_strategy_to_registry())\n",
-      "2025-03-17T20:04:11.657018Z ["
+      "\u001B[2m2025-03-24T15:09:02.141802Z\u001B[0m [\u001B[31m\u001B[1merror    \u001B[0m] \u001B[1mCould not retrive pod project Project ID not found, server response {'detail': 'Invalid token.'}\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jose/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/logconf.py\", line 191, in build_application_logger\n",
+      "    raise ValueError(f\"Project ID not found, server response {json_response}\")\n",
+      "ValueError: Project ID not found, server response {'detail': 'Invalid token.'} (at logconf.py:198 in build_application_logger())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got Status Code 403 with response {\"detail\":\"Invalid token.\"}\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Project ID not found, server response {'detail': 'Invalid token.'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 5\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mdotenv\u001B[39;00m\n\u001B[1;32m      3\u001B[0m dotenv\u001B[38;5;241m.\u001B[39mload_dotenv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m../../.env\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmainsequence\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvirtualfundbuilder\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mportfolio_interface\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m PortfolioInterface\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmainsequence\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvirtualfundbuilder\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01magent_interface\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m TDAGAgent\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/__init__.py:3\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mclient\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m TDAG_CONSTANTS, VAM_CONSTANTS\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/client/__init__.py:2\u001B[0m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m AuthLoaders\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels_tdag\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m (request_to_datetime, LocalTimeSeriesDoesNotExist, DynamicTableDoesNotExist,\n\u001B[1;32m      4\u001B[0m                            SourceTableConfigurationDoesNotExist, LocalTimeSerieUpdateDetails,register_strategy,\n\u001B[1;32m      5\u001B[0m                            JSON_COMPRESSED_PREFIX, Scheduler, SchedulerDoesNotExist, LocalTimeSerie,\n\u001B[1;32m      6\u001B[0m                            DynamicTableMetaData, DynamicTableDataSource, LocalTimeSerieNode, PodLocalLake,\n\u001B[1;32m      7\u001B[0m                            Project, UniqueIdentifierRangeMap, LocalTimeSeriesHistoricalUpdate, BACKEND_DETACHED,\n\u001B[1;32m      8\u001B[0m                            DataUpdates)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m TDAG_CONSTANTS, VAM_CONSTANTS\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/client/utils.py:12\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mpytz\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mtyping\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Union\n\u001B[0;32m---> 12\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmainsequence\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlogconf\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m logger\n\u001B[1;32m     14\u001B[0m DATE_FORMAT \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mY-\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mm-\u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[38;5;124mT\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mH:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mM:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mS.\u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[38;5;124mZ\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21mrequest_to_datetime\u001B[39m(string_date: \u001B[38;5;28mstr\u001B[39m):\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/logconf.py:205\u001B[0m\n\u001B[1;32m    201\u001B[0m     logger \u001B[38;5;241m=\u001B[39m logger\u001B[38;5;241m.\u001B[39mbind()\n\u001B[1;32m    202\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m logger\n\u001B[0;32m--> 205\u001B[0m logger \u001B[38;5;241m=\u001B[39m \u001B[43mbuild_application_logger\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/logconf.py:199\u001B[0m, in \u001B[0;36mbuild_application_logger\u001B[0;34m(application_name, **metadata)\u001B[0m\n\u001B[1;32m    197\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[1;32m    198\u001B[0m     logger\u001B[38;5;241m.\u001B[39mexception(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCould not retrive pod project \u001B[39m\u001B[38;5;132;01m{\u001B[39;00me\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 199\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\n\u001B[1;32m    201\u001B[0m logger \u001B[38;5;241m=\u001B[39m logger\u001B[38;5;241m.\u001B[39mbind()\n\u001B[1;32m    202\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m logger\n",
+      "File \u001B[0;32m~/code/MainSequenceClientSide/mainsequence-sdk/mainsequence/logconf.py:191\u001B[0m, in \u001B[0;36mbuild_application_logger\u001B[0;34m(application_name, **metadata)\u001B[0m\n\u001B[1;32m    188\u001B[0m json_response \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()\n\u001B[1;32m    190\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mproject_id\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m json_response:\n\u001B[0;32m--> 191\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mProject ID not found, server response \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mjson_response\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    193\u001B[0m logger \u001B[38;5;241m=\u001B[39m logger\u001B[38;5;241m.\u001B[39mbind(project_id\u001B[38;5;241m=\u001B[39mjson_response[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mproject_id\u001B[39m\u001B[38;5;124m\"\u001B[39m], \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mmetadata)\n\u001B[1;32m    194\u001B[0m logger \u001B[38;5;241m=\u001B[39m logger\u001B[38;5;241m.\u001B[39mbind(data_source_id\u001B[38;5;241m=\u001B[39mjson_response[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdata_source_id\u001B[39m\u001B[38;5;124m\"\u001B[39m], \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mmetadata)\n",
+      "\u001B[0;31mValueError\u001B[0m: Project ID not found, server response {'detail': 'Invalid token.'}"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -300,9 +299,6 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
      "start_time": "2025-03-17T20:04:50.073051Z"
     }
