--- a/examples/getting_started/Getting Started.ipynb
+++ b/examples/getting_started/Getting Started.ipynb
@@ -136,7 +136,7 @@
     }
    },
    "source": [
-    "from mainsequence.virtualfundbuilder.contrib.signals import MarketCap\n",
+    "from mainsequence.virtualfundbuilder.contrib.time_series import MarketCap\n",
     "\n",
     "portfolio = tdag_agent.generate_portfolio(MarketCap, signal_description=\"Create me a market cap portfolio using AAPL and GOOG\")\n",
     "\n",
