Update generate_report_example.py, output_report.html, base.html, and 20 more files

--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -41,7 +41,7 @@
     "from mainsequence.tdag_client import DataUpdates\n",
     "import datetime\n",
     "from mainsequence.vam_client.models import TargetPortfolio, Asset\n",
-    "from mainsequence import VAM_CONSTANTS \n"
+    "from mainsequence import MARKETS_CONSTANTS \n"
    ],
    "outputs": [],
    "execution_count": 2
@@ -444,7 +444,7 @@
     "        local_time_serie_id=local_time_serie_id,  # Example ID\n",
     "        local_time_serie_hash_id=local_time_serie_hash_id,\n",
     "        local_signal_time_serie_id=local_time_serie_id, #we are not using a signal so we are setting the same \n",
-    "        available_in_venues__symbols=[VAM_CONSTANTS.BINANCE_EV_SYMBOL],\n",
+    "        available_in_venues__symbols=[MARKETS_CONSTANTS.BINANCE_EV_SYMBOL],\n",
     "        execution_configuration={},\n",
     "        calendar_name=\"24/7\",\n",
     "        tracking_funds_expected_exposure_from_latest_holdings=False\n",
@@ -452,13 +452,13 @@
     "\n",
     "# Create Execution Portfolio\n",
     "execution_portfolio = create_portfolio(\n",
-    "    VAM_CONSTANTS.PORTFOLIO_BUILD_FOR_EXECUTION, \"Execution Portfolio\", live_portfolio_ts.local_hash_id,live_portfolio_ts.local_metadata.id\n",
+    "    MARKETS_CONSTANTS.PORTFOLIO_BUILD_FOR_EXECUTION, \"Execution Portfolio\", live_portfolio_ts.local_hash_id,live_portfolio_ts.local_metadata.id\n",
     ")\n",
     "print(\"Created Execution Portfolio:\", execution_portfolio)\n",
     "\n",
     "# Create Backtesting Portfolio\n",
     "backtest_portfolio = create_portfolio(\n",
-    "    VAM_CONSTANTS.PORTFOLIO_BUILD_FOR_BACKTEST, \"Backtest Portfolio\",backtesting_portfolio_ts.local_hash_id,backtesting_portfolio_ts.local_metadata.id\n",
+    "    MARKETS_CONSTANTS.PORTFOLIO_BUILD_FOR_BACKTEST, \"Backtest Portfolio\",backtesting_portfolio_ts.local_hash_id,backtesting_portfolio_ts.local_metadata.id\n",
     ")\n",
     "print(\"Created Backtest Portfolio:\", backtest_portfolio)\n"
    ],
@@ -494,8 +494,8 @@
    },
    "cell_type": "code",
    "source": [
-    "valuation_asset=Asset.filter(symbol=\"USD\",asset_type=VAM_CONSTANTS.ASSET_TYPE_CURRENCY,\n",
-    "                             execution_venue__symbol=VAM_CONSTANTS.MAIN_SEQUENCE_PORTFOLIOS_EV)\n",
+    "valuation_asset=Asset.filter(symbol=\"USD\",asset_type=MARKETS_CONSTANTS.ASSET_TYPE_CURRENCY,\n",
+    "                             execution_venue__symbol=MARKETS_CONSTANTS.MAIN_SEQUENCE_PORTFOLIOS_EV)\n",
     "valuation_asset=valuation_asset[0]"
    ],
    "id": "e1a874596ebd49a5",
@@ -664,7 +664,7 @@
    },
    "cell_type": "code",
    "source": [
-    "assets=Asset.filter(symbol__in=[\"BTCUSDT\",\"ETHUSDT\"],execution_venue__symbol=VAM_CONSTANTS.BINANCE_EV_SYMBOL)\n",
+    "assets=Asset.filter(symbol__in=[\"BTCUSDT\",\"ETHUSDT\"],execution_venue__symbol=MARKETS_CONSTANTS.BINANCE_EV_SYMBOL)\n",
     "assets=assets[:2]"
    ],
    "id": "2be779c6df54a849",
