--- a/examples/markets/time_series_details/data_sources_tutorial.ipynb
+++ b/examples/markets/time_series_details/data_sources_tutorial.ipynb
@@ -66,13 +66,13 @@
     "import dotenv\n",
     "dotenv.load_dotenv('../../../.env')\n",
     "from mainsequence.vam_client.models import TDAGAPIDataSource, HistoricalBarsSource, Asset,ExecutionVenue\n",
-    "from mainsequence import VAM_CONSTANTS\n",
+    "from mainsequence import MARKETS_CONSTANTS\n",
     "\n",
     "\n",
     "# Query for existing TDAGAPIDataSource and HistoricalBarsSource instances\n",
     "existing_tdag_sources = TDAGAPIDataSource.filter(unique_identifier=\"tdag_example_source\")\n",
     "existing_historical_sources = HistoricalBarsSource.filter(unique_identifier=\"historical_example_source\")\n",
-    "execution_venues=ExecutionVenue.filter(symbol=VAM_CONSTANTS.BINANCE_EV_SYMBOL)\n",
+    "execution_venues=ExecutionVenue.filter(symbol=MARKETS_CONSTANTS.BINANCE_EV_SYMBOL)\n",
     "# Query assets\n",
     "some_assets = Asset.filter(symbol__in=[\"BTCUSDT\", \"ETHUSDT\"])\n",
     "\n",
