add missing report.html

--- a/examples/markets/assets/asset_category_tutorial.ipynb
+++ b/examples/markets/assets/asset_category_tutorial.ipynb
@@ -17,21 +17,21 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:14.226569Z",
-     "start_time": "2025-02-27T13:00:09.291376Z"
+     "end_time": "2025-04-03T10:27:40.394182Z",
+     "start_time": "2025-04-03T10:27:40.388417Z"
     }
    },
    "source": [
     "# Import necessary modules\n",
     "import dotenv\n",
     "dotenv.load_dotenv('../../../.env')\n",
-    "import mainsequence.vam_client\n",
-    "from mainsequence.vam_client.models import Asset, AssetCategory\n",
-    "from mainsequence.vam_client.utils import CONSTANTS\n",
+    "import mainsequence.client\n",
+    "from mainsequence.client import Asset, AssetCategory\n",
+    "from mainsequence.client import CONSTANTS\n",
     "\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -86,19 +86,43 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:14.664061Z",
-     "start_time": "2025-02-27T13:00:14.565324Z"
+     "end_time": "2025-04-03T10:28:02.636539Z",
+     "start_time": "2025-04-03T10:28:02.094034Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from mainsequence.vam_client.models import User\n",
+    "from mainsequence.client import User\n",
     "#get authenticated user to extract its organization and query if the categories already exists\n",
     "user=User.get_authenticated_user_details()\n",
     "org_uid = user.organization.uid  # "
    ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-03T10:28:02.095895Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mRequesting GET from http://192.168.178.17:8000/user/api/user/get_user_details/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:55 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": null,
+   "source": [
+    "# Check if the \"Favorite Crypto\" category exists\n",
+    "crypto_asset_ids = []\n",
+    "crypto_category = AssetCategory.filter(organization_owner_uid=org_uid, display_name=\"Favorite Crypto\")\n",
+    "if len(crypto_category)==0:\n",
+    "    crypto_category = AssetCategory.create(display_name=\"Favorite Crypto\", source=\"user_defined\", assets=crypto_asset_ids)\n",
+    "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
+    "else:\n",
+    "    crypto_category=crypto_category[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -109,13 +133,7 @@
     }
    },
    "source": [
-    "# Check if the \"Favorite Crypto\" category exists\n",
-    "crypto_category = AssetCategory.filter(organization_owner_uid=org_uid, name=\"Favorite Crypto\")\n",
-    "if len(crypto_category)==0:\n",
-    "    crypto_category = AssetCategory.create(name=\"Favorite Crypto\", source=\"user_defined\", assets=crypto_asset_ids)\n",
-    "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
-    "else:\n",
-    "    crypto_category=crypto_category[0]\n",
+    "\n",
     "# Check if the \"Favorite US Stocks\" category exists\n",
     "stocks_category = AssetCategory.filter(organization_owner_uid=org_uid, name=\"Favorite US Stocks\")\n",
     "if len(stocks_category)==0:\n",
