fixes to examples

--- a/examples/markets/assets/asset_category_tutorial.ipynb
+++ b/examples/markets/assets/asset_category_tutorial.ipynb
@@ -17,21 +17,23 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-03T10:27:40.394182Z",
-     "start_time": "2025-04-03T10:27:40.388417Z"
+     "end_time": "2025-04-10T10:09:47.892989Z",
+     "start_time": "2025-04-10T10:09:46.260356Z"
     }
    },
    "source": [
     "# Import necessary modules\n",
     "import dotenv\n",
+    "import os\n",
     "dotenv.load_dotenv('../../../.env')\n",
+    "\n",
     "import mainsequence.client\n",
     "from mainsequence.client import Asset, AssetCategory\n",
     "from mainsequence.client import CONSTANTS\n",
     "\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -44,8 +46,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:14.460800Z",
-     "start_time": "2025-02-27T13:00:14.229789Z"
+     "end_time": "2025-04-10T10:09:49.167771Z",
+     "start_time": "2025-04-10T10:09:48.310702Z"
     }
    },
    "source": [
@@ -86,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-03T10:28:02.636539Z",
-     "start_time": "2025-04-03T10:28:02.094034Z"
+     "end_time": "2025-04-10T10:15:24.662078Z",
+     "start_time": "2025-04-10T10:09:52.138910Z"
     }
    },
    "cell_type": "code",
@@ -97,22 +99,17 @@
     "user=User.get_authenticated_user_details()\n",
     "org_uid = user.organization.uid  # "
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001B[2m2025-04-03T10:28:02.095895Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mRequesting GET from http://192.168.178.17:8000/user/api/user/get_user_details/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:55 in make_request())\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T10:16:01.011077Z",
+     "start_time": "2025-04-10T10:16:00.180770Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Check if the \"Favorite Crypto\" category exists\n",
     "crypto_asset_ids = []\n",
@@ -122,7 +119,17 @@
     "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
     "else:\n",
     "    crypto_category=crypto_category[0]"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Categories: Crypto: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -177,8 +184,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:15.870208Z",
-     "start_time": "2025-02-27T13:00:15.025238Z"
+     "end_time": "2025-04-10T10:19:31.347404Z",
+     "start_time": "2025-04-10T10:19:30.396899Z"
     }
    },
    "source": [
@@ -190,11 +197,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existing Categories: [Base Ecosystem source:coingecko, Crypto Top 25 source:mainsequence, Crypto Top 10 source:mainsequence, Celo Ecosystem source:coingecko, Decentralized Exchange (DEX) source:coingecko, Crypto Top 100 source:mainsequence, Delphi Ventures Portfolio source:coingecko, Dex Aggregator source:coingecko, Ethereum Ecosystem source:coingecko, FTX Holdings source:coingecko, GMCI 30 Index source:coingecko, GMCI DeFi Index source:coingecko, GMCI Index source:coingecko, GMCI Layer 1 Index source:coingecko, Hedera Ecosystem source:coingecko, Kava Ecosystem source:coingecko, Exchange-based Tokens source:coingecko, Meme source:coingecko, Multicoin Capital Portfolio source:coingecko, Near Protocol Ecosystem source:coingecko, Optimism Ecosystem source:coingecko, PolitiFi source:coingecko, Polychain Capital Portfolio source:coingecko, Polygon Ecosystem source:coingecko, Centralized Exchange (CEX) Token source:coingecko, Smart Contract Platform source:coingecko, Solana Ecosystem source:coingecko, Solana Meme source:coingecko, Stellar Ecosystem source:coingecko, Sui Ecosystem source:coingecko, TON Ecosystem source:coingecko, Tron Ecosystem source:coingecko, Layer 1 (L1) source:coingecko, ZkSync Ecosystem source:coingecko, Crypto Top 50 source:mainsequence, Account Abstraction source:coingecko, Proof of Work (PoW) source:coingecko, Proof of Stake (PoS) source:coingecko, Made in USA source:coingecko, World Liberty Financial Portfolio source:coingecko, Alleged SEC Securities source:coingecko, Fiat-backed Stablecoin source:coingecko, Stablecoins source:coingecko, Decentralized Finance (DeFi) source:coingecko, Crypto Top 250 source:mainsequence, USD Stablecoin source:coingecko, Alameda Research Portfolio source:coingecko, Algorand Ecosystem source:coingecko, Andreessen Horowitz (a16z) Portfolio source:coingecko, Aptos Ecosystem source:coingecko, Arbitrum Ecosystem source:coingecko, Avalanche Ecosystem source:coingecko, Favorite US Stocks source:user_defined, Favorite Crypto source:user_defined]\n"
+      "Existing Categories: [Magnificent 7 Alpaca source: user_defined, 7 assets, MAGNIFICENT 7 source: mainsequence, 7 assets, S&P500 Constitutents source: datahub.io, 472 assets, Top 10 Crypto Market Cap source: coingecko, 10 assets, Top 50 Crypto Market Cap source: coingecko, 50 assets, Top 100 Crypto Market Cap source: coingecko, 100 assets, Top 100 Crypto Market Cap_BINANCE source: coingecko, 92 assets, Favorite Crypto source: user_defined, 0 assets]\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -207,8 +214,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:16.097042Z",
-     "start_time": "2025-02-27T13:00:15.875608Z"
+     "end_time": "2025-04-10T10:19:46.064684Z",
+     "start_time": "2025-04-10T10:19:44.956697Z"
     }
    },
    "source": [
@@ -229,12 +236,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated Crypto Category: orm_class='AssetCategory' id=458 unique_id='1a3dca4d-f5eb-439c-9522-cb6ff9c962fd' name='Favorite Crypto' source='user_defined' assets=[11440, 12419, 11439, 11834] organization_owner_uid='00000000-0000-0000-0000-000000000001'\n",
-      "[11440, 12419, 11439, 11834]\n"
+      "Updated Crypto Category: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[193084] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
+      "[193084]\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
